[#60] Sourav Das/Sanjana - fixed alignment style of copy message

--- a/public/css/lobby.css
+++ b/public/css/lobby.css
@@ -34,6 +34,7 @@ main {
   font-size: 2em;
 }
 
+
 #players-container {
   width: 50%;
   height: 60%;
@@ -95,6 +96,7 @@ i {
 
 #game-link {
   height: 2em;
+  display: flex;
 }
 
 #copy-message {
